--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,5 +1,16 @@
+@import "bootstrap/_variables";
+
 @font: Helvetica, Arial, sans-serif;
 
 body {
   font-family: @font;
+}
+
+.navbar {
+  .brand {
+    margin-left: 10px !important;
+  }
+}
+#content {
+  margin-top: @navbarHeight + 10px;
 }
