--- a/app/assets/stylesheets/bootstrap.less
+++ b/app/assets/stylesheets/bootstrap.less
@@ -27,7 +27,8 @@
 @import "bootstrap/_tables.less";
 
 // Components: common
-@import "bootstrap/_sprites.less";
+//@import "bootstrap/_sprites.less";
+@import "bootstrap/_font-awesome.less";
 @import "bootstrap/_dropdowns.less";
 @import "bootstrap/_wells.less";
 @import "bootstrap/_component-animations.less";
