--- a/app/views/mytodo.scala.html
+++ b/app/views/mytodo.scala.html
@@ -1,7 +1,7 @@
-@(message: String = "")
+@(message: String, user: User)
 
-@main("Not implemented yet") {
-    <h1>Not yet implemented.</h1>
+@main("Not implemented yet", Some(user)) {
+    <h2>Not yet implemented.</h2>
 
     @if(message.length > 0) {
       <p>@message</p>
