--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -2,29 +2,36 @@
 
 @{/* Gets the "form" helper used below. */}
 @import helper._
+@import helper.twitterBootstrap._
 
 @main("Login") {
-        
-  @form(action = routes.Auth.authenticate) {
-    @{ // Now to handle global errors. Doesn't have to be in the form.
-       loginForm.globalError.map{ error =>
-         <span class="error">{error.message}</span>
-       }
+  <div id="login-form" class="well">
+    <div class="heading">Please sign in</div>
+
+    @form(action = routes.Auth.authenticate) {
+      @{ // Now to handle global errors. Doesn't have to be in the form.
+         loginForm.globalError.map{ error =>
+           <span class="error">{error.message}</span>
+         }
+      }
+      @inputText(
+        loginForm("username"),
+        args = 'size -> 16,
+               'id -> "username",
+               '_label -> "Username",
+               '_showConstraints -> false,
+               'placeholder -> "your username"
+      )
+      @inputPassword(
+        loginForm("password"),
+        args = 'size -> 16,
+               '_label -> "Password",
+               '_showConstraints -> false,
+               'placeholder -> "your password")
+
+      <div id="buttons">
+        <button class="btn btn-primary">Login</button>
+      </div>
     }
-    @inputText(
-      loginForm("username"),
-      args = 'size -> 20,
-             '_label -> "Username",
-             '_showConstraints -> false,
-             'placeholder -> "your username"
-    )
-    @inputPassword(
-      loginForm("password"),
-      args = 'size -> 20,
-             '_label -> "Password",
-             '_showConstraints -> false,
-             'placeholder -> "your password")
-    <button>Login</button>
-  }
-    
+  </div>
 }
