Added path and controller for (stub) admin page.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -62,6 +62,13 @@
                   <i class="icon-off"></i>Sign out
                 </a>
               </li>
+              @if(u.isAdmin) {
+                <li>
+                  <a href="@routes.Admin.index()">
+                    <i class="icon-wrench"></i>Admin
+                  </a>
+                </li>
+              }
             }
           </ul>
         </div>
