--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -33,6 +33,19 @@ body {
 .navbar {
   .brand {
     margin-left: 10px !important;
+
+    #logo-image {
+      max-height: @navbarHeight - 10px !important;
+    }
+  }
+
+  .nav {
+    li {
+      a {
+        padding-top: @navbarHeight / 2 !important;
+        padding-bottom: 0 !important;
+      }
+    }
   }
 }
 
