--- a/app/views/mytodo.scala.html
+++ b/app/views/mytodo.scala.html
@@ -1,9 +1,11 @@
 @(message: String, user: User)
 
 @main("Not implemented yet", Some(user)) {
+  <div class="span12">
     <h2>Not yet implemented.</h2>
 
     @if(message.length > 0) {
       <p>@message</p>
     }
+  </div>
 }
