--- a/app/views/mytodo.scala.html
+++ b/app/views/mytodo.scala.html
@@ -1,6 +1,6 @@
 @(message: String, user: User)
 
-@main("Not implemented yet", Some(user)) {
+@main("Not implemented yet", user = Some(user)) {
   <div class="span12">
     <h2>Not yet implemented.</h2>
 
