--- a/app/assets/stylesheets/admin.less
+++ b/app/assets/stylesheets/admin.less
@@ -2,13 +2,17 @@
 
 #admin {
   #sidebar {
-    heading {
+    header {
       color: darken(@wellBackground, 40%);
       font-weight: bold;
       font-variant: small-caps;
       text-transform: lowercase;
       font-size: @baseFontSize + 4px;
       margin-bottom: 20px !important;
+    }
+
+    #loader {
+      float: right;
     }
 
     #actions {
