Added code to start spinner on AJAX request and stop it on response. Added more table styling.

--- a/app/views/admin/admin.scala.html
+++ b/app/views/admin/admin.scala.html
@@ -27,7 +27,9 @@
       @content
 
       <!-- User display -->
-      <table id="users" class="table" style="display:none"></div>
+      <table id="users" class="table table-hover table-bordered"
+             style="display:none">
+        <caption>Users</caption>
         <thead>
           <tr>
             <th>ID</th>
