Now shows ID of user who's currently logged in.

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -47,6 +47,19 @@ body {
       }
     }
   }
+
+  #logged-in-as {
+    float: right;
+    margin-right: 10px;
+    font-size: @baseFontSize - 2px;
+
+    .prefix {
+      font-style: italic;
+    }
+
+    .username {
+    }
+  }
 }
 
 #content {
