--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(user: User)
+@(user: User)(implicit flash: Flash)
 
-@main("Main", user = Some(user)) {
+@main("Main", flash, user = Some(user)) {
 }
