--- a/app/assets/stylesheets/admin.less
+++ b/app/assets/stylesheets/admin.less
@@ -1,4 +1,5 @@
 @import "bootstrap/_variables";
+@import "_mixins";
 
 #admin {
   #sidebar {
@@ -38,5 +39,17 @@
       // Top-only border radius
       border-radius: 5px 5px 0px 0px;
     }
+  }
+}
+
+// Remember: This form sits outside the admin area;
+#edit-user-form {
+
+  .inline-form;
+  .heading-styles;
+  .centered (50%);
+
+  #buttons {
+    .form-button-bar (15%);
   }
 }
