--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,22 +1,5 @@
 @import "bootstrap/_variables";
-
-// LESS mixin: Inline form rules. Assumes Twitter Bootstrap helper has
-// been hauled into the template.
-.inline-form () {
-  label {
-    width: 20% !important;
-    display: inline-block;
-    text-align: right;
-  }
-
-  .input {
-    display: inline-block;
-
-    .help-inline {
-      color: red;
-    }
-  }
-}
+@import "_mixins";
 
 @font: Helvetica, Arial, sans-serif;
 
@@ -66,30 +49,16 @@ body {
   margin-top: @navbarHeight + 20px;
 
   #login-form {
+    width: 50% !important;
 
-    width: auto;
-    max-width: 50%;
-    margin-left: auto;
-    margin-right: auto;
     margin-top: 20px;
 
     .inline-form;
-
-    .heading {
-      color: darken(@wellBackground, 30%);
-      font-size: @baseFontSize + 5px;
-      font-weight: bold;
-      width: 100% !important;
-      text-align: right;
-      margin-bottom: 20px;
-    }
+    .heading-styles;
+    .centered (50%);
 
     #buttons {
-      width: 15%;
-      margin-left: auto;
-      margin-right: auto;
-      margin-top: 10px;
+      .form-button-bar (15%);
     }
-
   }
 }
