--- a/app/views/admin/edituser.scala.html
+++ b/app/views/admin/edituser.scala.html
@@ -1,5 +1,62 @@
 @(editUser: User, currentUser: User, editForm: Form[models.User])(implicit flash: Flash)
 
+@import helper._
+@import helper.twitterBootstrap._
+
 @{/* Don't want the admin page here, with its AJAXness. */}
 @main("Edit User", flash, user = Some(currentUser)) {
+
+  <div class="span12">
+    @editForm.globalError.map { error =>
+      <div class="alert alert-error">
+        <button type="button" class="close" data-dismiss="alert">x</button>
+        @error.message
+      </div>
+    }
+
+    <a href="@routes.Admin.index()" class="btn btn-link">
+      <i class="icon-arrow-left"></i> Back to admin
+    </a>
+
+    <div id="edit-user-form" class="well">
+      <div class="heading">Edit user @editUser.username</div>
+
+      @form(action = routes.Admin.saveUser) {
+        @inputText(
+          editForm("username"),
+          args = 'size             -> 16,
+                 'id               -> "username",
+                 '_label           -> "Username",
+                 '_showConstraints -> false,
+                 '_placeholder     -> "user name"
+        )
+        @inputPassword(
+          editForm("password"),
+          args = 'size             -> 16,
+                 'id               -> "password",
+                 '_label           -> "Password",
+                 '_showConstraints -> false,
+                 '_placeholder     -> "password"
+        )
+        @inputPassword(
+          editForm("passwordConfirmation"),
+          args = 'size             -> 16,
+                 'id               -> "password-confirmation",
+                 '_label           -> "Password (again)",
+                 '_showConstraints -> false,
+                 '_placeholder     -> "password (again)"
+        )
+        @checkbox(
+          editForm("isAdmin"),
+          args = 'id               -> "is-admin",
+                 '_label           -> "Administrator"
+        )
+        <input type="hidden" name="id" value="@editUser.id"/>
+
+        <div id="buttons">
+          <button class="btn btn-primary">Save</button>
+        </div>
+      }
+    </div>
+  </div>
 }
