--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -17,27 +17,24 @@
     }
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
-
+    <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
     <!--
         Twitter Bootstrap integration. Adapted from
         https://github.com/playframework/Play20/wiki/Tips
+
+        NOTE: With the Javascript, inclusion order matters. The order,
+        below, is (currently) the same as the that used by the Twitter
+        Bootstrap Makefile, when it builds "bootstrap.js".
     -->
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")" />
 
-    <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap/bootstrap-affix.min.js")"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap/bootstrap-alert.min.js")"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap/bootstrap-button.min.js")"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap/bootstrap-carousel.min.js")"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap/bootstrap-collapse.min.js")"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap/bootstrap-dropdown.min.js")"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap/bootstrap-modal.min.js")"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap/bootstrap-popover.min.js")"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap/bootstrap-scrollspy.min.js")"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap/bootstrap-tab.min.js")"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap/bootstrap-tooltip.min.js")"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap/bootstrap-transition.min.js")"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap/bootstrap-typeahead.min.js")"></script>
+    @Seq("transition", "alert", "button", "carousel", "collapse", "dropdown",
+         "modal", "tooltip", "popover", "scrollspy", "tab", "typeahead",
+         "affix").map {name =>
+      <script src="@routes.Assets.at("javascripts/bootstrap/bootstrap-%s.min.js".format(name))"></script>
+    }
+    <!-- END Twitter Bootstrap integration -->
+
     <script src="@routes.Assets.at("javascripts/navbar.js")"></script>
 
     @additionalHead.map {html =>
@@ -94,6 +91,7 @@
       </div>
 
       <div id="content">
+        @Logger.debug(flash.toString)
         @Seq("info", "error").map {t =>
           @flash.data.get(t).map { message =>
             <div class="alert alert-@t">
