Can now add users in admin screen.

--- a/app/assets/stylesheets/admin.less
+++ b/app/assets/stylesheets/admin.less
@@ -43,7 +43,7 @@
 }
 
 // Remember: This form sits outside the admin area;
-#edit-user-form {
+#edit-user-form, #new-user-form {
 
   .inline-form;
   .heading-styles;
