--- a/app/views/mytodo.scala.html
+++ b/app/views/mytodo.scala.html
@@ -1,6 +1,6 @@
-@(message: String, user: User)(implicit flash: Flash)
+@(message: String, currentUser: User)(implicit flash: Flash)
 
-@main("Not implemented yet", flash, user = Some(user)) {
+@main("Not implemented yet", currentUser = Some(currentUser)) {
   <div class="span12">
     <h2>Not yet implemented.</h2>
 
