--- a/app/views/admin/newuser.scala.html
+++ b/app/views/admin/newuser.scala.html
@@ -1,4 +1,4 @@
-@(editUser: User, currentUser: User, editForm: Form[models.User])(implicit flash: Flash)
+@(currentUser: User, newUserForm: Form[models.User])(implicit flash: Flash)
 
 @import helper._
 @import helper.twitterBootstrap._
@@ -8,10 +8,10 @@
   <script src="@routes.Assets.at("javascripts/admin.js")"></script>
 }
 
-@main("Edit User", additionalHead = Some(head), currentUser = Some(currentUser)) {
+@main("New User", additionalHead = Some(head), currentUser = Some(currentUser)) {
 
   <div class="span12">
-    @editForm.globalError.map { error =>
+    @newUserForm.globalError.map { error =>
       <div class="alert alert-error">
         <button type="button" class="close" data-dismiss="alert">x</button>
         @error.message
@@ -22,12 +22,12 @@
       <i class="icon-arrow-left"></i> Back to admin
     </a>
 
-    <div id="edit-user-form" class="well">
-      <div class="heading">Edit user @editUser.username</div>
+    <div id="new-user-form" class="well">
+      <div class="heading">Create a new user</div>
 
-      @form(action = adminRoutes.UserAdmin.updateUser) {
+      @form(action = adminRoutes.UserAdmin.createUser) {
         @inputText(
-          editForm("username"),
+          newUserForm("username"),
           args = 'size             -> 16,
                  'id               -> "username",
                  '_label           -> "Username",
@@ -35,7 +35,7 @@
                  '_placeholder     -> "user name"
         )
         @inputPassword(
-          editForm("password"),
+          newUserForm("password"),
           args = 'size             -> 16,
                  'id               -> "password",
                  '_label           -> "Password",
@@ -43,7 +43,7 @@
                  '_placeholder     -> "password"
         )
         @inputPassword(
-          editForm("password_confirmation"),
+          newUserForm("password_confirmation"),
           args = 'size             -> 16,
                  'id               -> "password-confirmation",
                  '_label           -> "Password (again)",
@@ -51,11 +51,10 @@
                  '_placeholder     -> "password (again)"
         )
         @checkbox(
-          editForm("isAdmin"),
+          newUserForm("isAdmin"),
           args = 'id               -> "is-admin",
                  '_label           -> "Administrator"
         )
-        <input type="hidden" name="id" value="@editUser.id"/>
 
         <div id="buttons">
           <button class="btn btn-primary">Save</button>
