--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -22,6 +22,7 @@
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
     <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/util.min.js")" type="text/javascript"></script>
     <!--
         Twitter Bootstrap integration. Adapted from
         https://github.com/playframework/Play20/wiki/Tips
@@ -107,6 +108,18 @@
           @content
         </div>
       </div>
+    </div>
+
+    <div class="modal" role="dialog" id="modal" style="display: none">
+      <div class="modal-header">
+        <h3 id="modal-heading"></h3>
+      </div>
+      <div class="modal-body" id="modal-body"></div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" id="modal-ok">OK</button>
+        <button class="btn" id="modal-cancel">Cancel</button>
+      </div>
+
     </div>
   </body>
 </html>
