--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -96,14 +96,24 @@
       </div>
 
       <div id="content">
-        @Seq("info", "error").map {t =>
-          @flash.data.get(t).map { message =>
-            <div class="alert alert-@t">
-              <a class="close" data-dismiss="alert">x</a>
-              @message
-            </div>
-          }.getOrElse("")
-        }
+        <div id="flash">
+          @Seq("info", "error").map {t =>
+            @flash.data.get(t).map { message =>
+              <div class="alert alert-@t">
+                <a class="close" data-dismiss="alert">x</a>
+                @message
+              </div>
+            }.getOrElse("")
+          }
+        </div>
+        @{/* Used by window.flash() in util.coffee */}
+        <div id="flash-template" style="display:none">
+          <div class="alert">
+            <a class="close" data-dismiss="alert">x</a>
+            <span class="flash-message"></span>
+          </div>
+        </div>
+
         <div class="row-fluid">
           @content
         </div>
@@ -119,7 +129,6 @@
         <button class="btn btn-primary" id="modal-ok">OK</button>
         <button class="btn" id="modal-cancel">Cancel</button>
       </div>
-
     </div>
   </body>
 </html>
