User deletion now works. User class now logs SQL.

--- a/app/views/admin/index.scala.html
+++ b/app/views/admin/index.scala.html
@@ -54,8 +54,7 @@
                 Edit
               </a>
               <a class="btn btn-small delete-user-button action-button"
-                 data-url="@adminRoutes.UserAdmin.deleteUser(-1)"
-                 href="javascript:void(0)">
+                 href="@adminRoutes.UserAdmin.deleteUser(-1)">
                 Delete
               </a>
             </td>
