--- a/app/views/admin/index.scala.html
+++ b/app/views/admin/index.scala.html
@@ -28,6 +28,7 @@
 
     <div class="span9">
       <!-- User display -->
+      <div id="current-user" data-id="@currentUser.id.get" style="display:none"></div>
       <table id="users" class="table table-hover table-bordered"
              style="display:none">
         <caption>Users</caption>
@@ -49,11 +50,11 @@
             <td class="field-value user-username"></td>
             <td class="field-value user-admin"></td>
             <td>
-              <a class="btn btn-small edit-user-button action-button"
+              <a class="btn btn-mini edit-user-button action-button"
                  href="@adminRoutes.UserAdmin.editUser(-1)"> 
                 Edit
               </a>
-              <a class="btn btn-small delete-user-button action-button"
+              <a class="btn btn-mini delete-user-button action-button"
                  href="@adminRoutes.UserAdmin.deleteUser(-1)">
                 Delete
               </a>
