--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -62,3 +62,25 @@ body {
     }
   }
 }
+
+#home {
+  .sidebar {
+    .sidebar-styles;
+  }
+
+  #site-search {
+    margin-right: 10px;
+    float: right;
+
+    form {
+      i {
+        margin-right: 5px;
+        font-size: 16px;
+      }
+    }
+  }
+
+  table#sites {
+    .captioned-table;
+  }
+}
