--- a/app/assets/stylesheets/_mixins.less
+++ b/app/assets/stylesheets/_mixins.less
@@ -74,22 +74,8 @@
     list-style-type: none;
     margin-left: 0;
   }
-}
 
-.captioned-table () {
-  // Twitter Bootstrap border radius rounds the <thead> and the
-  // <tbody>, but the caption sits above them. Since we're rounding
-  // the caption top, alter what Twitter Bootstrap does with its borders.
-  border-radius: 0px 0px 5px 5px;
-
-  caption {
-    background: darken(@wellBackground, 10%);
-    font-weight: bold;
-    font-size: @baseFontSize + 6px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-
-    // Top-only border radius
-    border-radius: 5px 5px 0px 0px;
+  #loader {
+    float: right;
   }
 }
